# talks

./: .gitignore  README.md
2015-10-23_parallelism_and_concurrency/demo/deadlock/: Main.hs  run
2015-10-23_parallelism_and_concurrency/demo/primes/: run
2015-10-23_parallelism_and_concurrency/demo/threadring/: Main  ThreadRing.hi  ThreadRing.hs  run
2015-10-23_parallelism_and_concurrency/slides/: Makefile  parallel-concurrent.pandoc  tng-template.html
2015-10-23_parallelism_and_concurrency/slides/reveal.js/: Gruntfile.js  README.md  index.html
2016-05-13_qa-in-haskell/: LICENSE  qa-talk.cabal  stack.yaml
2016-05-13_qa-in-haskell/benchmark/: Main.hs
2016-05-13_qa-in-haskell/src/: Prolude.hs
2016-05-13_qa-in-haskell/test/Testsuite/: Main.hs
2016-07-23_zurihac_stg/: README.md
2016-07-23_zurihac_stg/slides/: index.html
2016-09-02_munihac-beginner-workshop/: README.md
2016-09-02_munihac-beginner-workshop/slides/: haskell.pandoc
2016-09-02_munihac_beginner-workshop/slides/: .gitignore  index.html
2016-10-06_haskellexchange_stg/: README.md
2016-10-06_haskellexchange_stg/slides/: index.html
2016-11-11_lens/: README.md
2016-11-11_lens/lens-talk/: ghci.conf  lens-talk.cabal
2016-11-11_lens/lens-talk/src/: Lib.hs
2016-11-11_lens/slides/: index.html
2017-05-23_hindley-milner/: README.md
2017-05-23_hindley-milner/slides/: index.html
2017-06-16_logic/: README.md
2017-06-16_logic/slides/: index.html
2017-08-06_HacFreiburg_qa-in-haskell/: README.md  qa-talk.cabal  stack.yaml  talk-outline.md
2017-08-06_HacFreiburg_qa-in-haskell/benchmark/: Main.hs
2017-08-06_HacFreiburg_qa-in-haskell/src/: Prolude.hs
2017-08-06_HacFreiburg_qa-in-haskell/test/Doctests/: Main.hs
2017-08-06_HacFreiburg_qa-in-haskell/test/Testsuite/: Main.hs
2017-10-11_io-in-haskell/: README.md
2017-10-11_io-in-haskell/slides/: index.html
2017-11-28_haskell-ahaas/: README.md
2017-11-28_haskell-ahaas/slides/: index.html
2017-12-08-parallelism-concurrency/demo/deadlock/: Main.hs
2017-12-08-parallelism-concurrency/demo/manythreads/: Main.hs
2017-12-08-parallelism-concurrency/demo/primes/: Main  Main.hs  Primes.hs  run
2017-12-08-parallelism-concurrency/slides/: Makefile  parallel-concurrent.pandoc
2018-01-26_lambda-calculus-intro/slides/: build-loop  lambda-calculus.pandoc
2018-03-09_compiler-overview/: ast.xml  compiler-pipeline-draw.io.xml
2018-03-09_compiler-overview/slides/: Makefile  compiler.pandoc
2019-10-18_lambda-calculus-intro/slides/: Makefile  build-loop  lambda-calculus.pandoc
2019-12-06_logic/slides/: index.html
2020-xx-xx_cool_unixtools/: .gitignore  generate-random-slides
2020-xx-xx_cool_unixtools/tools/: +x.md  box.md  fixmyshit.md  fzf.md  htop.md  httpie.md  kazam.md  notify-send.md  petname.md  q, jq, yq.md  ranger.md  rsync.md  shell hieroglyphics.md  sponge.md  trash.md  watch, inotifywait.md  xclip.md
2020-xx-xx_jq/slides/: Makefile  source.md
2020-xx-xx_jq/slides/img/: boring.kra
2020-xx-xx_seeing/: brainstorming.md
2021-01-29_client-server-workshop/: hie.yaml  simple.cabal  stack.yaml
2021-01-29_client-server-workshop/app/Client/: Main.hs
2021-01-29_client-server-workshop/app/Server/: Main.hs
2021-01-29_client-server-workshop/blank/: deps
2021-01-29_client-server-workshop/live/: live.cabal  package.yaml
2021-01-29_client-server-workshop/live/src/: Lib.hs
2021-01-29_client-server-workshop/live/test/: Spec.hs
2021-01-29_client-server-workshop/peek/: Agenda.md  hie.yaml  package.yaml  workshop-test.cabal
2021-01-29_client-server-workshop/peek/src/: Lib.hs
2021-01-29_client-server-workshop/peek/test/: Main.hs
2021-01-29_client-server-workshop/src/: Util.hs
2021-05-21_techday_stg/: README.md
2021-05-21_techday_stg/slides/: index.html
2021-10-08_cool_unixtools/: Makefile  generate-random-slides
2021-10-08_cool_unixtools/tools/: convert (imagemagick).md  count loc.md  cut, grep, tr, sort, tee, ….md  fuck.md  fzf.md  guake.md  tig.md  whats-my-ip.md
2021-10-08_cool_unixtools/tools/essential/: autojump.md
beginner-workshop_rolling-update/: README.md
beginner-workshop_rolling-update/slides/: index.html
beginner-workshop_rolling-update/src/ClientServer/: Makefile  README.md  simple.cabal  stack.yaml
beginner-workshop_rolling-update/src/ClientServer/app/Client/: Main.hs
beginner-workshop_rolling-update/src/ClientServer/app/Server/: Main.hs
beginner-workshop_rolling-update/src/ClientServer/src/: Util.hs
(+34 files in other folders)
