name:                simple
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/simple#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Util
  build-depends:       base
                     , network-simple
                     , bytestring
  default-language:    Haskell2010
  ghc-options:         -Wall

executable simple-server
  hs-source-dirs:      app/Server
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , network-simple
                     , bytestring
                     , simple
  default-language:    Haskell2010

executable simple-client
  hs-source-dirs:      app/Client
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , network-simple
                     , bytestring
                     , simple
  default-language:    Haskell2010
